# OpenDTU-MCP-Server

./: LICENSE  README.md  pyproject.toml  server.py
