[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendtu-mcp"
version = "0.1.0"
description = "MCP Server für OpenDTU – Wechselrichter-Limits abfragen und setzen"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
opendtu-mcp = "server:main"

[project.urls]
Repository = "https://github.com/ebongard/OpenDTU-MCP-Server"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
